robot  Adding: [[dv:ކަޒަކިސްތާން]], [[ta:கசக்ஸ்தான்]], [[wo:Kasakistaan]]

--- a/Pow_Kazagh.mw
+++ b/Pow_Kazagh.mw
@@ -70,6 +70,7 @@
 [[cy:Kazakstan]]
 [[da:Kasakhstan]]
 [[de:Kasachstan]]
+[[dv:ކަޒަކިސްތާން]]
 [[el:Καζακστάν]]
 [[en:Kazakhstan]]
 [[eo:Kazaĥio]]
@@ -140,6 +141,7 @@
 [[sr:Казахстан]]
 [[sv:Kazakstan]]
 [[sw:Kazakhstan]]
+[[ta:கசக்ஸ்தான்]]
 [[te:కజకస్తాన్]]
 [[tg:Қазоқистон]]
 [[th:ประเทศคาซัคสถาน]]
@@ -154,6 +156,7 @@
 [[vi:Kazakhstan]]
 [[vo:Kasakistän]]
 [[war:Kasahistan]]
+[[wo:Kasakistaan]]
 [[yi:קאזאקסטאן]]
 [[zh:哈萨克斯坦]]
 [[zh-classical:哈薩克]]
