--- a/Arghantina.mw
+++ b/Arghantina.mw
@@ -143,7 +143,7 @@ Powyow kentrevek a Arghantina yw [[Brasil]], [[Uruguay]], [[Paraguay]], [[Bolivi
 [[ps:ارجنټاين]]
 [[pt:Argentina]]
 [[qu:Arhintina]]
-[[rm:Argentina]]
+[[rm:Argentinia]]
 [[ro:Argentina]]
 [[ru:Аргентина]]
 [[sa:अर्जन्टीना]]
