--- a/Keynvor_Iwerydh.mw
+++ b/Keynvor_Iwerydh.mw
@@ -104,7 +104,7 @@ Yma'n '''Keynvor Atlantek''' owth ystynna a-dreus enep a 100 000 000 km²; ev yw
 [[vec:Ozsèano Atlàntico]]
 [[vi:Đại Tây Dương]]
 [[wa:Oceyan Atlantike]]
-[[wo:Mbàmbulaan gu Atlas]]
+[[wo:Mbàmbulaanug Atlas]]
 [[yi:אטלאנטיק]]
 [[zh:大西洋]]
 [[zh-min-nan:Tāi-se-iûⁿ]]
