robot  Adding: [[fr:Comté de Summers]]

--- a/Konteth_Summers,_Virjynni_West.mw
+++ b/Konteth_Summers,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Summers County]]
 [[en:Summers County, West Virginia]]
 [[eo:Summers County (Okcidenta Virginio)]]
+[[fr:Comté de Summers]]
 [[lmo:Summers County, West Virginia]]
 [[nds:Summers County]]
 [[nl:Summers County]]
