robot  Adding: [[lv:Tauraģes apriņķis]]

--- a/Konteth_Tauragė.mw
+++ b/Konteth_Tauragė.mw
@@ -34,6 +34,7 @@ mappa=Taurages apskritis.png
 [[it:Contea di Tauragė]]
 [[ja:タウラゲ州]]
 [[lt:Tauragės apskritis]]
+[[lv:Tauraģes apriņķis]]
 [[nl:Tauragė (district)]]
 [[no:Tauragė fylke]]
 [[pl:Obwód tauroski]]
