robot  Adding: [[pag:Kurów]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -123,6 +123,7 @@ Kurów yw tyller dineythyans an hembrenkyas ha pennmenyster [[Kemmynegoreth|Kemm
 [[oc:Kuròw]]
 [[os:Курув]]
 [[pa:ਕੂਰੋਫ]]
+[[pag:Kurów]]
 [[pap:Kurów]]
 [[pdc:Kurów]]
 [[pih:Kurow]]
