--- a/Konteth_Taylor,_Virjynni_West.mw
+++ b/Konteth_Taylor,_Virjynni_West.mw
@@ -26,6 +26,7 @@
 [[de:Taylor County (West Virginia)]]
 [[en:Taylor County, West Virginia]]
 [[eo:Taylor County (Okcidenta Virginio)]]
+[[fr:Comté de Taylor (Virginie-Occidentale)]]
 [[lmo:Taylor County, West Virginia]]
 [[nl:Taylor County (West Virginia)]]
 [[no:Taylor County i Vest-Virginia]]
