robot  Adding: [[lv:Telšu apriņķis]]

--- a/Konteth_Telšiai.mw
+++ b/Konteth_Telšiai.mw
@@ -34,6 +34,7 @@ mappa=Telsiu apskritis.png
 [[it:Contea di Telšiai]]
 [[ja:テルシェイ州]]
 [[lt:Telšių apskritis]]
+[[lv:Telšu apriņķis]]
 [[nl:Telšiai (district)]]
 [[no:Telšiai fylke]]
 [[pl:Obwód telszycki]]
