--- a/Limbourgek.mw
+++ b/Limbourgek.mw
@@ -25,7 +25,7 @@
 [[Category:Iseldiryow]]
 
 [[af:Limburgs]]
-[[de:Limburgisch-Bergisch]]
+[[de:Limburgisch]]
 [[el:Λιμβουργιανή γλώσσα]]
 [[en:Limburgish language]]
 [[eo:Limburga lingvo]]
