The file [[:Image:Frenchpolynesia_location_map.JPG]] has been removed, as it has been deleted by [[:commons:User:Kameraad Pjotr]]: ''In category [[w:commons::category:Unknown as of 10 October 2007|Unknown as of 10 October 2007]]; no source''. ''[[m:U

--- a/Polynesi_Frynkek.mw
+++ b/Polynesi_Frynkek.mw
@@ -12,7 +12,7 @@
 |-
 | align="center" colspan="2" | <small> ''Lavar kenedhlek: Tahiti Nui Mare'are'a''</small>
 |-
-| align="center" colspan="2" | [[image:Frenchpolynesia location map.JPG|Desedhans Polynesi Frynkek]]
+| align="center" colspan="2" | 
 |-
 |Kenedhel || [[Image:Flag of France.svg|20px|]]&nbsp;[[Pow Frynk]]
 |-
