--- a/Andorra.mw
+++ b/Andorra.mw
@@ -46,7 +46,7 @@
 '''Prynseth Andorra''' (yn [[Katalanek]], ''Principat d'Andorra''; yn [[Frynkek]], ''Principauté d'Andorre''; yn [[Spaynek]], ''Principado de Andorra'') yw stat pur vyghan yn deghow [[Europa]]. An brynseth usi desedhys y'n Menydhyow Pyreneek yntra [[Kataloni]] ha [[Gaskoyn]].
 
 
-{{Stokk-europa}}
+{{Stokk-andorra}}
 {{Europa}}
 
 [[Category:Andorra| ]]
