--- a/Bywonieth.mw
+++ b/Bywonieth.mw
@@ -125,6 +125,7 @@ Yma bywonydhyon ow klasya eghennow orth gwydhennow genynnek. Ottomma ensampel a 
 [[pt:Biologia]]
 [[qu:Kawsay Yachay]]
 [[ro:Biologie]]
+[[roa-rup:Biologhia]]
 [[ru:Биология]]
 [[sa:जीवशास्त्रं]]
 [[sc:Biologia]]
