robot  Adding: [[nah:Euro]]

--- a/Euro.mw
+++ b/Euro.mw
@@ -65,6 +65,7 @@ An '''euro''' ('''€''' ou '''EUR''') yw mona kemmyn unnik deudhek stat esel a'
 [[mr:युरो]]
 [[ms:Euro]]
 [[mt:Ewro]]
+[[nah:Euro]]
 [[nds:Euro]]
 [[nl:Euro]]
 [[nn:Euro]]
