robot  Adding: [[tet:Inglaterra]]

--- a/Pow_Sows.mw
+++ b/Pow_Sows.mw
@@ -129,6 +129,7 @@ Pow Sows o '''[[myghternedh Pow Sows|gwlaskor]]''' unnik a-dhia dermyn [[Athelst
 [[sv:England]]
 [[sw:Uingereza (nchi)]]
 [[ta:இங்கிலாந்து]]
+[[tet:Inglaterra]]
 [[tg:Англия]]
 [[th:อังกฤษ]]
 [[tl:Inglatera]]
