robot  Modifying: [[haw:‘Eulopa]]

--- a/Europa.mw
+++ b/Europa.mw
@@ -61,7 +61,7 @@ A-dhia [[Nessa Bresel an Norvys]], y tallathas statow Europa dos keffrys. Unyans
 [[gu:યુરોપ]]
 [[gv:Yn Europey]]
 [[hak:Êu-chû]]
-[[haw:ʻEulopa]]
+[[haw:‘Eulopa]]
 [[he:אירופה]]
 [[hi:यूरोप]]
 [[hr:Europa]]
