robot  Adding: [[nov:Lituania]]

--- a/Lithouani.mw
+++ b/Lithouani.mw
@@ -161,6 +161,7 @@ Yn [[2004]] yth omjunnyas Lithywani an [[Unyans Europek]] (po an UE).
 [[nl:Litouwen]]
 [[nn:Litauen]]
 [[no:Litauen]]
+[[nov:Lituania]]
 [[nrm:Lithuanie]]
 [[oc:Lituània]]
 [[os:Литва]]
