robot  Adding: [[be-x-old:Парагвай]]

--- a/Paragway.mw
+++ b/Paragway.mw
@@ -50,6 +50,7 @@ An '''Repoblek Paragway''' (yn [[Spaynek]], '''''República del Paraguay''''') y
 [[ar:باراغواي]]
 [[az:Paraqvay]]
 [[bat-smg:Paragvajos]]
+[[be-x-old:Парагвай]]
 [[bg:Парагвай]]
 [[bn:প্যারাগুয়ে]]
 [[bpy:পারাগুয়ে]]
