robot  Adding: [[nov:Religione]]

--- a/Kryjyans.mw
+++ b/Kryjyans.mw
@@ -121,6 +121,7 @@ Yma dew vagas chyf a gryjyans y'n [[bys ma]], h.y. kryjyansow [[Abraham|Abrahame
 [[nl:Religie]]
 [[nn:Religion]]
 [[no:Religion]]
+[[nov:Religione]]
 [[oc:Religions]]
 [[os:Дин]]
 [[pa:ਧਰਮ]]
