--- a/Konteth_Utena.mw
+++ b/Konteth_Utena.mw
@@ -35,6 +35,7 @@ mappa=Utenos apskritis.png
 [[it:Contea di Utena]]
 [[ja:ウテナ州]]
 [[lt:Utenos apskritis]]
+[[lv:Utenas apriņķis]]
 [[nl:Utena (district)]]
 [[no:Utena fylke]]
 [[pl:Obwód uciański]]
