--- a/Belarussek.mw
+++ b/Belarussek.mw
@@ -83,7 +83,6 @@ Yma diw [[lytherennek]] devnydhys rag skrifa Belarussek: onan gyrillek, ogas dre
 [[pt:Língua bielorrussa]]
 [[ro:Limba bielorusă]]
 [[ru:Белорусский язык]]
-[[ru-sib:Беларуской говор]]
 [[simple:Belarusian language]]
 [[sk:Bieloruština]]
 [[sl:Beloruščina]]
@@ -94,4 +93,5 @@ Yma diw [[lytherennek]] devnydhys rag skrifa Belarussek: onan gyrillek, ogas dre
 [[th:ภาษาเบลารุส]]
 [[tr:Beyaz Rusça]]
 [[uk:Білоруська мова]]
+[[yi:בעלארוסיש]]
 [[zh:白俄罗斯语]]
