--- a/Antillys_Iseldiryek.mw
+++ b/Antillys_Iseldiryek.mw
@@ -54,6 +54,7 @@ An '''Antillys Iseldiryek''' (yn [[Iseldiryek]], ''Nederlandse Antillen'') yw ti
 [[af:Nederlandse Antille]]
 [[an:Antillas Neerlandesas]]
 [[ar:جزر الأنتيل الهولندية]]
+[[be-x-old:Нідэрляндзкія Антылы]]
 [[bg:Холандски Антили]]
 [[bpy:নেদারল্যান্ড এন্টিল্লেস]]
 [[br:Antilhez Nederlandat]]
