--- a/Dustunyoryon_Yehovah.mw
+++ b/Dustunyoryon_Yehovah.mw
@@ -1,7 +1,14 @@
+[[Image:Watchtower-brooklyn.jpg|thumb|280px|Jehovah's Witnesses Headquarters in Columbia Heights, Brooklyn, New York, United States of America.]]
+
 An '''Dhustunioryon [[Yehovah]]''' yw bagas kryjyk [[kristyon]]. 
 
 ==Istori==
 An istori arnowdyh a Dhutunioryon Yehovah a dhallathas y'n [[19ves kansblydhen]] yn [[Philadelphia]], [[Statys Unys]]. [[Charles Taze Russel]] gans kowetha a wrug studhya an [[Bibel]] drefenn ny allas krysi yn “[[ifarn]]”. 
+
+[[image:Evangelização.jpg|thumb|300px|left|Jehovah's Witnesses preaching house to house in Sofia, Bulgaria.]]
+
+[[Image:Jehova witnesses in Lvov.jpg||thumb|300px|right|Jehovah's Witnesses preaching in the steet in Lviv, Ukraine.]]
+
 
 Nyns esa hanow an bagas ma, ytho, tus a wrug leverys yn aga hever avel "Russelites" po an "Studhyoryon an Bibel". Mes yn [[1931]], yn kuntelles, i a dhewisas an hanow nowydh "Dustunyoryon Yehovah". Yth esa an hanow ma y'n Bibel, yn lyver [[Ysay]] 43:10.
 
@@ -23,6 +30,7 @@ Nyns esa hanow an bagas ma, ytho, tus a wrug leverys yn aga hever avel "Russelit
 [[ar:شهود يهوه]]
 [[ast:Testigos de Xehová]]
 [[ay:Jehová Diosan Qhanañchirinakapaxa]]
+[[id:Saksi-Saksi Yehuwa]]
 [[bg:Свидетелите на Йехова]]
 [[bs:Jehovini svjedoci]]
 [[ca:Testimonis de Jehovà]]
