--- a/Kaliforni.mw
+++ b/Kaliforni.mw
@@ -75,6 +75,7 @@ notes=
 [[haw:Kaleponi]]
 [[he:קליפורניה]]
 [[hr:Kalifornija]]
+[[ht:Kalifòni]]
 [[hu:Kalifornia]]
 [[hy:Կալիֆորնիա]]
 [[id:California]]
@@ -121,12 +122,15 @@ notes=
 [[sr:Калифорнија]]
 [[su:Kalifornia]]
 [[sv:Kalifornien]]
+[[sw:California]]
 [[ta:கலிபோர்னியா]]
+[[te:కాలిఫోర్నియా]]
 [[th:มลรัฐแคลิฟอร์เนีย]]
 [[tl:California]]
 [[tr:Kaliforniya]]
 [[uk:Каліфорнія]]
 [[ur:کیلی فورنیا]]
+[[uz:Kaliforniya]]
 [[vi:California]]
 [[vo:California]]
 [[wa:Californeye]]
