robot  Adding: [[hu:Brit Columbia]]

--- a/Kolombi_Bredennek.mw
+++ b/Kolombi_Bredennek.mw
@@ -63,6 +63,7 @@ notes=
 [[gl:Columbia Británica - British Columbia]]
 [[he:קולומביה הבריטית]]
 [[hr:Britanska Kolumbija]]
+[[hu:Brit Columbia]]
 [[ia:Columbia Britannic]]
 [[id:British Columbia]]
 [[io:British Columbia]]
