robot  Adding: [[fr:Comté de Webster (Virginie-Occidentale)]]

--- a/Konteth_Webster,_Virjynni_West.mw
+++ b/Konteth_Webster,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Webster County (West Virginia)]]
 [[en:Webster County, West Virginia]]
 [[eo:Webster County (Okcidenta Virginio)]]
+[[fr:Comté de Webster (Virginie-Occidentale)]]
 [[lmo:Webster County, West Virginia]]
 [[nds:Webster County (West-Virginia)]]
 [[nl:Webster County (West Virginia)]]
