robot  Adding: [[fr:Comté de Wetzel]], [[zh:威索縣]]

--- a/Konteth_Wetzel,_Virjynni_West.mw
+++ b/Konteth_Wetzel,_Virjynni_West.mw
@@ -27,8 +27,10 @@
 [[de:Wetzel County]]
 [[en:Wetzel County, West Virginia]]
 [[eo:Wetzel County (Okcidenta Virginio)]]
+[[fr:Comté de Wetzel]]
 [[lmo:Wetzel County, West Virginia]]
 [[nds:Wetzel County]]
 [[nl:Wetzel County]]
 [[no:Wetzel County]]
 [[sv:Wetzel County]]
+[[zh:威索縣]]
