--- a/Korea_Dhyhow.mw
+++ b/Korea_Dhyhow.mw
@@ -93,6 +93,7 @@ An Repoblek arnowydh veu selys yn [[1948]] wosa an [[Statys Unys]] ha'n [[Unyans
 [[hy:Հարավային Կորեա]]
 [[ia:Corea del Sud]]
 [[id:Korea Selatan]]
+[[ilo:Abagatan a Korea]]
 [[io:Sud-Korea]]
 [[is:Suður-Kórea]]
 [[it:Corea del Sud]]
