robot  Adding: [[kl:Tysklandi]]

--- a/Almayn.mw
+++ b/Almayn.mw
@@ -139,6 +139,7 @@ Aswonnys avel [[Taves ranndiryel|tavosow ranndiryel]] yw [[Danek]], [[Sorbek]], 
 [[jv:Jerman]]
 [[ka:გერმანია]]
 [[kk:Алмания]]
+[[kl:Tysklandi]]
 [[kn:ಜರ್ಮನಿ]]
 [[ko:독일]]
 [[ks:जर्मनी]]
