robot  Adding: [[fr:Comté de Wirt]]

--- a/Konteth_Wirt,_Virjynni_West.mw
+++ b/Konteth_Wirt,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Wirt County]]
 [[en:Wirt County, West Virginia]]
 [[eo:Wirt County (Okcidenta Virginio)]]
+[[fr:Comté de Wirt]]
 [[lmo:Wirt County, West Virginia]]
 [[nds:Wirt County]]
 [[nl:Wirt County]]
