--- a/Calans_gregorek.mw
+++ b/Calans_gregorek.mw
@@ -43,7 +43,7 @@ Ottoma [[Mis|mysyow]] an vledhen y'n calans gregorek:
 [[es:Calendario gregoriano]]
 [[et:Gregoriuse kalender]]
 [[eu:Gregoriar egutegia]]
-[[fa:تقویم گرگوری]]
+[[fa:سالنمای گرگوری]]
 [[fi:Gregoriaaninen kalenteri]]
 [[fiu-vro:Gregoriusõ kallendri]]
 [[fo:Gregorianski kalendarin]]
