*Empty MediaWiki Message*

--- a/Breten_Vyghan.mw
+++ b/Breten_Vyghan.mw
@@ -4,8 +4,9 @@
 |-
 | colspan="3" style="background:white" align="center" |
 {| width=100%
-| align="center" width=66% | {{border|[[Image:Gwenn ha du.svg|180px|Baner Breten Vyghan]]}}
-| align="center" width=33% | [[Image:BlasonBRETAGNE.jpg|90px|Kota arvow Breten Vyghan]]
+| align="center" width=66% | [[Image:Flag of Brittany.svg|125px|center|Baner Breten Vyghan]]
+| align="center" width=33% | [[Image:Logotype région Bretagne fr.jpg|85px|center|Logo Breten Vyghan]]
+| align="center" width=33% | [[Image:Wappen bretagne.svg|85px|center|Kota arvow Breten Vyghan]]
 |}
 |-
 ! align="center" | '''Derivadow''' || '''Rannvro Vreten Vyghan''' || '''Liger-Atlantek'''
