robot  Adding: [[fr:Comté de Wyoming (Virginie-Occidentale)]]

--- a/Konteth_Wyoming,_Virjynni_West.mw
+++ b/Konteth_Wyoming,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Wyoming County (West Virginia)]]
 [[en:Wyoming County, West Virginia]]
 [[eo:Wyoming County (Okcidenta Virginio)]]
+[[fr:Comté de Wyoming (Virginie-Occidentale)]]
 [[lmo:Wyoming County, West Virginia]]
 [[nds:Wyoming County (West-Virginia)]]
 [[nl:Wyoming County (West Virginia)]]
