robot  Adding: [[ar:ولاية زاكاتيكاس]], [[bg:Сакатекас]], [[gl:Zacatecas]]

--- a/Zacatecas.mw
+++ b/Zacatecas.mw
@@ -44,6 +44,8 @@
 {{Statys a Meksiko}}
 [[Category:Statys a Veksiko]]
 
+[[ar:ولاية زاكاتيكاس]]
+[[bg:Сакатекас]]
 [[ca:Estat de Zacatecas]]
 [[cs:Zacatecas (stát)]]
 [[da:Zacatecas (stat)]]
@@ -54,6 +56,7 @@
 [[eu:Zacatecas]]
 [[fi:Zacatecas]]
 [[fr:État de Zacatecas]]
+[[gl:Zacatecas]]
 [[id:Zacatecas (negara bagian)]]
 [[it:Zacatecas (stato)]]
 [[ja:サカテカス州]]
