robot  Adding: [[bn:জুলু ভাষা]], [[uk:Зулу]]

--- a/Zoulou.mw
+++ b/Zoulou.mw
@@ -39,6 +39,7 @@
 [[an:Idioma zulú]]
 [[ar:زولو (لغة)]]
 [[bg:Зулуски език]]
+[[bn:জুলু ভাষা]]
 [[ca:Zulu]]
 [[cy:Swlw]]
 [[da:Zulu (sprog)]]
@@ -65,6 +66,7 @@
 [[sh:Zulu jezik]]
 [[sq:Gjuha zulu]]
 [[sv:Zulu (språk)]]
+[[uk:Зулу]]
 [[xh:IsiZulu]]
 [[zh:祖鲁语]]
 [[zu:IsiZulu]]
