robot  Adding: [[pl:Syddanmark]]

--- a/Region_Syddanmark.mw
+++ b/Region_Syddanmark.mw
@@ -41,6 +41,7 @@
 [[nds:Region Süüddäänmark]]
 [[nl:Zuid-Denemarken]]
 [[no:Region Syddanmark]]
+[[pl:Syddanmark]]
 [[pt:Dinamarca do Sul (região)]]
 [[ro:Regiunea Syddanmark]]
 [[ru:Южная Дания (область)]]
