*Empty MediaWiki Message*

--- a/Dustunyoryon_Yehovah.mw
+++ b/Dustunyoryon_Yehovah.mw
@@ -1,4 +1,4 @@
-[[Image:Watchtower-brooklyn.jpg|thumb|280px|Jehovah's Witnesses Headquarters in Columbia Heights, Brooklyn, New York, United States of America.]]
+[[Image:Watchtower-brooklyn.jpg|thumb|280px|Jehovah's Witnesses Headquarters in 25-30 Columbia Heights, Brooklyn, New York, United States of America.]]
 
 An '''Dhustunioryon [[Yehovah]]''' yw bagas kryjyk [[kristyon]]. 
 
