robot  Adding: [[lt:Akrė]] Modifying: [[tr:Acre (eyalet)]]

--- a/Acre_(stat).mw
+++ b/Acre_(stat).mw
@@ -63,6 +63,7 @@
 [[ka:აკრი (შტატი)]]
 [[ko:아크리 주]]
 [[la:Acre]]
+[[lt:Akrė]]
 [[nl:Acre (staat)]]
 [[nn:Acre i Brasil]]
 [[no:Acre (Brasil)]]
@@ -76,7 +77,7 @@
 [[sr:Акри]]
 [[sv:Acre (delstat)]]
 [[tg:Акри]]
-[[tr:Acre]]
+[[tr:Acre (eyalet)]]
 [[uk:Акрі]]
 [[vo:Acre]]
 [[zh:阿克里]]
