robot  Adding: [[zh:安格尔西岛]]

--- a/Ynys_Mon.mw
+++ b/Ynys_Mon.mw
@@ -37,3 +37,4 @@ Yn oes Pennsevigyon Kembra, Mon a wre rann a Brynseth [[Gwynedh]]: yn Aberfraw y
 [[ro:Insula Anglesey]]
 [[ru:Англси]]
 [[sv:Anglesey]]
+[[zh:安格尔西岛]]
