--- a/Tabasco.mw
+++ b/Tabasco.mw
@@ -51,7 +51,7 @@
 [[es:Tabasco]]
 [[eu:Tabasco (Mexiko)]]
 [[fi:Tabasco]]
-[[fr:Tabasco]]
+[[fr:Tabasco (État)]]
 [[id:Tabasco]]
 [[it:Tabasco (stato)]]
 [[ja:タバスコ州]]
