--- a/Azerbayjan.mw
+++ b/Azerbayjan.mw
@@ -153,6 +153,7 @@
 [[sr:Азербејџан]]
 [[sv:Azerbajdzjan]]
 [[sw:Azerbaijan]]
+[[ta:அசர்பைஜான்]]
 [[te:అజర్‌బైజాన్]]
 [[tet:Azerbaijaun]]
 [[tg:Озарбойҷон]]
