--- a/Konteth_Barbour,_Virjynni_West.mw
+++ b/Konteth_Barbour,_Virjynni_West.mw
@@ -28,9 +28,11 @@
 [[de:Barbour County (West Virginia)]]
 [[en:Barbour County, West Virginia]]
 [[eo:Barbour County (Okcidenta Virginio)]]
+[[fr:Comté de Barbour (Virginie-Occidentale)]]
 [[it:Contea di Barbour (Virginia Occidentale)]]
 [[nds:Barbour County (West-Virginia)]]
 [[nl:Barbour County (West Virginia)]]
 [[no:Barbour County i Vest-Virginia]]
 [[pdc:Barbour Kaundi, Wescht Wirschini]]
 [[sv:Barbour County, West Virginia]]
+[[zh:巴伯縣 (西維吉尼亞州)]]
