--- a/Malawi.mw
+++ b/Malawi.mw
@@ -51,6 +51,7 @@
 [[an:Malaui]]
 [[ar:ملاوي]]
 [[ast:Malaui]]
+[[bat-smg:Malavės]]
 [[bg:Малави]]
 [[bn:মালাউয়ি]]
 [[bpy:মালাবি]]
@@ -99,6 +100,7 @@
 [[lv:Malāvija]]
 [[mk:Малави]]
 [[ml:മലാവി]]
+[[mr:मलावी]]
 [[ms:Malawi]]
 [[nds:Malawi]]
 [[nl:Malawi]]
