robot  Modifying: [[lv:Kuruva]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -105,7 +105,7 @@ Kurów yw tyller dineythyans an hembrenkyas ha pennmenyster [[Kemmynegoreth|Kemm
 [[lmo:Kurów]]
 [[lo:ຄູໂຣ]]
 [[lt:Kuruvas]]
-[[lv:Kurova]]
+[[lv:Kuruva]]
 [[map-bms:Kurów]]
 [[mg:Kurów]]
 [[mk:Куров (село)]]
