robot  Adding: [[fr:Beckley (Virginie-Occidentale)]]

--- a/Beckley,_Virjynni_West.mw
+++ b/Beckley,_Virjynni_West.mw
@@ -6,6 +6,7 @@
 
 [[de:Beckley]]
 [[en:Beckley, West Virginia]]
+[[fr:Beckley (Virginie-Occidentale)]]
 [[lmo:Beckley, West Virginia]]
 [[nl:Beckley]]
 [[vo:Beckley]]
