robot  Adding: [[vi:Lục địa]]

--- a/Brastir.mw
+++ b/Brastir.mw
@@ -122,6 +122,7 @@ Ottomma unn rol possybyl anedha. An leow aswonnys yn kemmynna avel brastiryow yw
 [[tr:Kıta]]
 [[uk:Материк]]
 [[ur:براعظم]]
+[[vi:Lục địa]]
 [[wa:Continint]]
 [[wo:Gox]]
 [[yi:קאנטינענט]]
