robot  Adding: [[fr:Comté de Berkeley (Virginie-Occidentale)]]

--- a/Konteth_Berkeley,_Virjynni_West.mw
+++ b/Konteth_Berkeley,_Virjynni_West.mw
@@ -28,6 +28,7 @@
 [[de:Berkeley County (West Virginia)]]
 [[en:Berkeley County, West Virginia]]
 [[eo:Berkeley County (Okcidenta Virginio)]]
+[[fr:Comté de Berkeley (Virginie-Occidentale)]]
 [[lmo:Berkeley County, West Virginia]]
 [[nds:Berkeley County (West-Virginia)]]
 [[nl:Berkeley County (West Virginia)]]
