robot  Adding: [[mr:आंदोरा]], [[xal:Андорра]]

--- a/Andorra.mw
+++ b/Andorra.mw
@@ -125,6 +125,7 @@
 [[lt:Andora]]
 [[lv:Andora]]
 [[mk:Андора]]
+[[mr:आंदोरा]]
 [[ms:Andorra]]
 [[mt:Andorra]]
 [[na:Andorra]]
@@ -173,6 +174,7 @@
 [[vi:Andorra]]
 [[vo:Landorän]]
 [[war:Andorra]]
+[[xal:Андорра]]
 [[yi:אנדארא]]
 [[yo:Andorra]]
 [[zh:安道尔]]
