--- a/Veneto.mw
+++ b/Veneto.mw
@@ -1,6 +1,6 @@
 {{Infobox Regione
 |hanow=Regione del Veneto
-|baner=Regione-Veneto-Stemma.png
+|baner=Veneto-Stemma.png
 |regione=Veneto
 |pennsita=Venezia
 |enep=18,391
