--- a/Dustunyoryon_Yehovah.mw
+++ b/Dustunyoryon_Yehovah.mw
@@ -1,28 +1,16 @@
-[[Image:Watchtower-brooklyn.jpg|thumb|280px|Jehovah's Witnesses Headquarters in 25-30 Columbia Heights, Brooklyn, New York, United States of America.]]
+[[Image:Watchtower-brooklyn.jpg|thumb|280px|Kresenn Dustunyoryon Yehovah orth 25-30 Columbia Heights, Brooklyn, New York, an [[Statys Unys]].]]
 
-An '''Dhustunioryon [[Yehovah]]''' yw bagas kryjyk [[kristyon]]. 
+'''Dustunyoryon [[Yehovah]]''' yw bagas kryjyk [[kristyon]]. 
 
 ==Istori==
 
-An istori arnowdyh a Dhutunioryon Yehovah a dhallathas y'n [[19ves kansblydhen]] yn [[Philadelphia]], [[Statys Unys]]. [[Charles Taze Russel]] gans kowetha a wrug studhya an [[Bibel]] drefenn ny allas krysi yn “[[ifarn]]”. 
+An istori arnowydh a Dhustunyoryon Yehovah a dhallathas y'n [[19ves kansblydhen]] yn [[Philadelphia]], [[Statys Unys]]. [[Charles Taze Russel]] gans kowetha a wrug studhya an [[Bibel]] drefenn ny allas krysi yn “[[ifarn]]”. 
 
+[[image:Evangelização.jpg|thumb|280px|right|Dustunyoryon Yehovah ow fregowtha dhiworth ji dhe ji yn Sofia, [[Bulgari]].]]
 
+[[Image:Jehova witnesses in Lvov.jpg||thumb|280px|right|Dustunyoryon Yehovah ow pregowtha y'n stret yn Lviv, [[Ukrayn]].]]
 
-
-
-
-
-
-
-
-
-
-[[image:Evangelização.jpg|thumb|300px|left|Jehovah's Witnesses preaching house to house in Sofia, Bulgaria.]]
-
-[[Image:Jehova witnesses in Lvov.jpg||thumb|300px|right|Jehovah's Witnesses preaching in the steet in Lviv, Ukraine.]]
-
-
-Nyns esa hanow an bagas ma, ytho, tus a wrug leverys yn aga hever avel "Russelites" po an "Studhyoryon an Bibel". Mes yn [[1931]], yn kuntelles, i a dhewisas an hanow nowydh "Dustunyoryon Yehovah". Yth esa an hanow ma y'n Bibel, yn lyver [[Ysay]] 43:10.
+Nyns esa hanow an bagas ma, ytho, tus a wrug leverel yn aga hever avel "Russelites" po an "Studhyoryon an Bibel". Mes yn [[1931]], yn kuntellyans, i a dhewisas an hanow nowydh "Dustunyoryon Yehovah". Yth esa an hanow ma y'n Bibel, yn lyver [[Ysay]] 43:10.
 
 ==Kryjyansow==
 
@@ -32,14 +20,9 @@ Nyns esa hanow an bagas ma, ytho, tus a wrug leverys yn aga hever avel "Russelit
 *I a wra negha pub freudh. 
 *Ny grysons i yn ifarn, an Drynses, hengov kryjyk.
 
-
-
 ==Gwiasva==
 
 * [http://www.watchtower.org/ Watchtower.org]
-
-
-
 
 {{stokk}}
 [[Category:Kristoneth]]
