robot  Adding: [[gn:Perũ]], [[mr:पेरू देश]]

--- a/Perou.mw
+++ b/Perou.mw
@@ -84,6 +84,7 @@ An '''Repoblek Perou''' (yn [[spaynek]], '''''República del Perú''''') yw gwla
 [[ga:Peiriú]]
 [[gd:Pearu]]
 [[gl:Perú]]
+[[gn:Perũ]]
 [[gv:Yn Pheroo]]
 [[he:פרו]]
 [[hi:पेरू]]
@@ -112,6 +113,7 @@ An '''Repoblek Perou''' (yn [[spaynek]], '''''República del Perú''''') yw gwla
 [[lt:Peru]]
 [[lv:Peru]]
 [[mk:Перу]]
+[[mr:पेरू देश]]
 [[ms:Peru]]
 [[na:Peru]]
 [[nah:Perutlān]]
