robot  Adding: [[ay:Parawayi]], [[mr:पेराग्वे]]

--- a/Paragway.mw
+++ b/Paragway.mw
@@ -48,6 +48,7 @@ An '''Repoblek Paragway''' (yn [[Spaynek]], '''''República del Paraguay''''') y
 [[af:Paraguay]]
 [[an:Paraguai]]
 [[ar:باراغواي]]
+[[ay:Parawayi]]
 [[az:Paraqvay]]
 [[bat-smg:Paragvajos]]
 [[be-x-old:Парагвай]]
@@ -97,6 +98,7 @@ An '''Repoblek Paragway''' (yn [[Spaynek]], '''''República del Paraguay''''') y
 [[lt:Paragvajus]]
 [[lv:Paragvaja]]
 [[mk:Парагвај]]
+[[mr:पेराग्वे]]
 [[ms:Paraguay]]
 [[nah:Paraguai]]
 [[nap:Paraguay]]
