--- a/Urugway.mw
+++ b/Urugway.mw
@@ -49,6 +49,7 @@
 [[an:Uruguai]]
 [[ar:أوروجواي]]
 [[ast:Uruguay]]
+[[ay:Uruwayi]]
 [[az:Uruqvay]]
 [[bat-smg:Urugvajos]]
 [[be-x-old:Уругвай]]
@@ -102,7 +103,7 @@
 [[mk:Уругвај]]
 [[ml:ഉറുഗ്വേ]]
 [[ms:Uruguay]]
-[[nah:Uruhuayān]]
+[[nah:Uruguai]]
 [[nds:Uruguay]]
 [[nl:Uruguay]]
 [[nn:Uruguay]]
