robot  Adding: [[fr:Comté de Braxton]]

--- a/Konteth_Braxton,_Virjynni_West.mw
+++ b/Konteth_Braxton,_Virjynni_West.mw
@@ -28,6 +28,7 @@
 [[de:Braxton County]]
 [[en:Braxton County, West Virginia]]
 [[eo:Braxton County (Okcidenta Virginio)]]
+[[fr:Comté de Braxton]]
 [[nds:Braxton County]]
 [[nl:Braxton County]]
 [[no:Braxton County]]
