robot  Adding: [[fr:Comté de Brooke]], [[zh:布魯克縣]]

--- a/Konteth_Brooke,_Virjynni_West.mw
+++ b/Konteth_Brooke,_Virjynni_West.mw
@@ -28,9 +28,11 @@
 [[de:Brooke County]]
 [[en:Brooke County, West Virginia]]
 [[eo:Brooke County (Okcidenta Virginio)]]
+[[fr:Comté de Brooke]]
 [[lmo:Brooke County, West Virginia]]
 [[nds:Brooke County]]
 [[nl:Brooke County]]
 [[no:Brooke County]]
 [[pdc:Brooke Kaundi, Wescht Wirschini]]
 [[sv:Brooke County]]
+[[zh:布魯克縣]]
