robot  Adding: [[el:Βρυθονικές γλώσσες]]

--- a/Brythonek.mw
+++ b/Brythonek.mw
@@ -15,6 +15,7 @@ Kembrek a'n jeves an sallwa studh soedhogel. Y hyllir klywes Kembrek yn [[Kuntel
 [[br:Yezhoù predenek]]
 [[cy:Brythoneg]]
 [[de:Britannische Sprachen]]
+[[el:Βρυθονικές γλώσσες]]
 [[en:Brythonic languages]]
 [[fo:Brythonisk (mál)]]
 [[fr:Langue brittonique]]
