robot  Modifying: [[ml:ശാന്തസമുദ്രം]]

--- a/Mor_Cosel.mw
+++ b/Mor_Cosel.mw
@@ -72,7 +72,7 @@ An '''Keynvor Hebask''' yw keynvor, an brassa y'n [[Norvys]], ynter [[Asi]] hag 
 [[lv:Klusais okeāns]]
 [[mi:Te Moana-nui-a-Kiwa]]
 [[mk:Тихи Океан]]
-[[ml:ശാന്തമഹാസമുദ്രം]]
+[[ml:ശാന്തസമുദ്രം]]
 [[mn:Номхон Далай]]
 [[mr:प्रशांत महासागर]]
 [[ms:Lautan Pasifik]]
