/* Sitys bras (+ 10,000 aga gwerin) */

--- a/Vyrjynia_West.mw
+++ b/Vyrjynia_West.mw
@@ -46,7 +46,7 @@ notes=
 |51,685
 |53,421
 |-
-|[[Huntington,  Virjynni West|Huntington]]
+|[[Huntington, Vyrjynni West|Huntington]]
 |49,891
 |51,475
 |-
@@ -54,7 +54,7 @@ notes=
 |32,159
 |33,099 
 |-
-|[[Wheeling, Vyrjynia West|Wheeling]]
+|[[Wheeling, Vyrjynni West|Wheeling]]
 |29,891
 |31,419
 |-
@@ -62,7 +62,7 @@ notes=
 |28,160
 |26,809
 |-
-|[[Weirton, Vyrjynia West|Weirton]]
+|[[Weirton, Vyrjynni West|Weirton]]
 |19,691
 |20,411
 |-
@@ -70,7 +70,7 @@ notes=
 |18,992
 |19,097
 |-
-|[[Beckley, Vyrjynia West|Beckley]]
+|[[Beckley, Vyrjynni West|Beckley]]
 |16,994
 |17,254
 |-
