--- a/Azerbayjan.mw
+++ b/Azerbayjan.mw
@@ -123,6 +123,7 @@
 [[mk:Азербејџан]]
 [[ml:അസര്‍ബെയ്ജാന്‍]]
 [[mn:Азербайжан]]
+[[mr:अझरबैजान]]
 [[ms:Azerbaijan]]
 [[na:Azerbaijan]]
 [[nah:Azerbayān]]
