robot  Adding: [[xal:Германь]]

--- a/Almayn.mw
+++ b/Almayn.mw
@@ -228,6 +228,7 @@ Aswonnys avel [[Taves ranndiryel|tavosow ranndiryel]] yw [[Danek]], [[Sorbek]], 
 [[war:Alemanya]]
 [[wo:Almaañ]]
 [[wuu:德国]]
+[[xal:Германь]]
 [[xh:IJamani]]
 [[yi:דייטשלאנד]]
 [[yo:Jẹ́rmánì]]
