robot  Modifying: [[haw:‘Ōlelo ‘Alapia]]

--- a/Arabek.mw
+++ b/Arabek.mw
@@ -72,7 +72,7 @@
 [[fy:Arabysk]]
 [[ga:Araibis]]
 [[gl:Lingua árabe]]
-[[haw:ʻŌlelo ʻAlapia]]
+[[haw:‘Ōlelo ‘Alapia]]
 [[he:ערבית]]
 [[hi:अरबी भाषा]]
 [[hr:Arapski jezik]]
