--- a/Iseldiryek.mw
+++ b/Iseldiryek.mw
@@ -85,7 +85,7 @@ FL. Flevoland<br>
 [[ang:Niðerlandisc sprǣc]]
 [[ar:لغة هولندية]]
 [[az:Niderland dili]]
-[[be-x-old:Нідэрландская мова]]
+[[be-x-old:Нідэрляндзкая мова]]
 [[bg:Нидерландски език]]
 [[br:Nederlandeg]]
 [[ca:Neerlandès]]
