robot  Adding: [[jv:Kanada]]

--- a/Kanada.mw
+++ b/Kanada.mw
@@ -138,6 +138,7 @@ An [[Emperoureth Predennek]] a dryghas powyow est Kanada a'n [[Pow Frynk|Frynkyo
 [[iu:ᑲᓇᑕ/kanata]]
 [[ja:カナダ]]
 [[jbo:kadnygu'e]]
+[[jv:Kanada]]
 [[ka:კანადა]]
 [[kk:Канада]]
 [[kn:ಕೆನಡಾ]]
