robot  Modifying: [[pms:Coréa dël Nòrd]]

--- a/Korea_Gledh.mw
+++ b/Korea_Gledh.mw
@@ -119,7 +119,7 @@
 [[os:Корейы Адæмон Демократон Республикæ]]
 [[pam:North Korea]]
 [[pl:Korea Północna]]
-[[pms:Corea dël Nòrd]]
+[[pms:Coréa dël Nòrd]]
 [[ps:سهېلي کوريا]]
 [[pt:Coreia do Norte]]
 [[ro:Coreea de Nord]]
