--- a/Korea_Dhyhow.mw
+++ b/Korea_Dhyhow.mw
@@ -125,7 +125,7 @@ An Repoblek arnowydh veu selys yn [[1948]] wosa an [[Statys Unys]] ha'n [[Unyans
 [[oc:Corèa del Sud]]
 [[pam:South Korea]]
 [[pl:Korea Południowa]]
-[[pms:Corea dël Sud]]
+[[pms:Coréa dël Sud]]
 [[ps:سوېلي کوريا]]
 [[pt:Coreia do Sul]]
 [[rm:Corea dal sid]]
