update prime minister

--- a/Pow_Chek.mw
+++ b/Pow_Chek.mw
@@ -22,7 +22,7 @@
 |-
 |Lywydh || [[Václav Klaus]]
 |-
-|Pennmenyster || [[Jiří Paroubek]]
+|Pennmenyster || [[Mirek Topolánek]]
 |-
 |[[Enep]] || 78,866 km²
 |-
