--- a/Pow_Chek.mw
+++ b/Pow_Chek.mw
@@ -41,7 +41,7 @@
 |Kodenn pellgowser || +420
 |}
 
-'''Pow Chek''' yw stat yn Kres [[Europa]], ynter [[Almayn]], [[Poloni]], [[Slovaki]] ha [[Sloveni]].
+'''Pow Chek''' yw stat yn Kres [[Europa]], ynter [[Almayn]], [[Poloni]], [[Slovaki]] ha [[Estrych]].
 
 
 {{Stokk-europa}}
