robot  Adding: [[haw:‘Ōlelo Pinilana]]

--- a/Finnek.mw
+++ b/Finnek.mw
@@ -73,6 +73,7 @@ Yma kessenyans [[bogalenn]]ow yn Finnek:
 [[fy:Finsk]]
 [[ga:Fionlainnis]]
 [[gl:Lingua finesa]]
+[[haw:‘Ōlelo Pinilana]]
 [[he:פינית]]
 [[hi:फ़िनिश भाषा]]
 [[hr:Finski jezik]]
