robot  Adding: [[new:भारत]]

--- a/Eynda.mw
+++ b/Eynda.mw
@@ -184,6 +184,7 @@ An taves chyf a Eynda Gledh yw [[Hindi]], mes yma [[Yeth ranndiryel|yethow rannd
 [[nds:Indien]]
 [[nds-nl:India]]
 [[ne:भारत]]
+[[new:भारत]]
 [[nl:India]]
 [[nn:India]]
 [[no:India]]
