robot  Adding: [[fr:Comté de Clay (Virginie-Occidentale)]]

--- a/Konteth_Clay,_Virjynni_West.mw
+++ b/Konteth_Clay,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Clay County (West Virginia)]]
 [[en:Clay County, West Virginia]]
 [[eo:Clay County (Okcidenta Virginio)]]
+[[fr:Comté de Clay (Virginie-Occidentale)]]
 [[it:Contea di Clay (Virginia Occidentale)]]
 [[lmo:Clay County, West Virginia]]
 [[nds:Clay County (West-Virginia)]]
