--- a/Spaynek.mw
+++ b/Spaynek.mw
@@ -74,6 +74,7 @@
 [[fo:Spanskt (mál)]]
 [[fr:Espagnol]]
 [[frp:Castilyan]]
+[[fy:Spaansk]]
 [[ga:Spáinnis]]
 [[gl:Lingua castelá]]
 [[gn:Karaiñe'ẽ]]
