robot  Adding: [[new:कोलम्बिया]]

--- a/Kolombi.mw
+++ b/Kolombi.mw
@@ -109,6 +109,7 @@ An '''Repoblek Kolombi''' (yn [[Spaynek]], '''''República de Colombia''''') yw 
 [[na:Colombia]]
 [[nah:Colontlān]]
 [[nds:Kolumbien]]
+[[new:कोलम्बिया]]
 [[nl:Colombia]]
 [[nn:Colombia]]
 [[no:Colombia]]
