robot  Adding: [[la:Andorra Vetus]]

--- a/Andorra_la_Vella.mw
+++ b/Andorra_la_Vella.mw
@@ -32,9 +32,8 @@
 [[Category:Sitys ha trevow]]
 
 [[am:አንዶራ ላ ቬላ]]
-[[ar:أندورا لا فيلا]]
 [[an:Andorra la Biella]]
-[[frp:Andorra-la-Vielye]]
+[[ar:أندورا لا فيلا]]
 [[be-x-old:Андора ля Вэлья]]
 [[bg:Андора ла Веля]]
 [[ca:Andorra la Vella]]
@@ -43,47 +42,49 @@
 [[da:Andorra la Vella]]
 [[de:Andorra la Vella]]
 [[en:Andorra la Vella]]
-[[et:Andorra la Vella]]
-[[es:Andorra la Vieja]]
 [[eo:Andoro Malnova]]
+[[es:Andorra la Vieja]]
+[[et:Andorra la Vella]]
 [[eu:Andorra la Vella]]
+[[fi:Andorra la Vella]]
 [[fr:Andorre-la-Vieille]]
+[[frp:Andorra-la-Vielye]]
 [[gl:Andorra a Vella - Andorra la Vella]]
-[[ko:안도라라베야]]
-[[hy:Անդորա լա Վեյա]]
+[[he:אנדורה לה וולה]]
 [[hr:Andorra la Vella]]
+[[ht:Andò-la-Vyèy]]
+[[hu:Andorra la Vella]]
+[[hy:Անդորա լա Վեյա]]
 [[id:Andorra la Vella]]
 [[it:Andorra la Vella]]
-[[he:אנדורה לה וולה]]
-[[sw:Andorra la Vella]]
-[[ht:Andò-la-Vyèy]]
+[[ja:アンドラ・ラ・ベリャ]]
+[[ko:안도라라베야]]
 [[ku:Andorra la Vella]]
+[[la:Andorra Vetus]]
 [[lij:A Vella]]
 [[lt:Andora (miestas)]]
-[[hu:Andorra la Vella]]
 [[na:Andorra la Vella]]
 [[nl:Andorra la Vella]]
-[[ja:アンドラ・ラ・ベリャ]]
-[[no:Andorra la Vella]]
 [[nn:Andorra la Vella]]
+[[no:Andorra la Vella]]
 [[nov:Andorra la Vella]]
 [[oc:Andòrra la Vièlha]]
-[[pms:Andòrra la Vella]]
 [[pl:Andora (miasto)]]
+[[pms:Andòrra la Vella]]
 [[pt:Andorra-a-Velha]]
-[[ro:Andorra la Vella]]
 [[qu:Andorra la Vella]]
+[[ro:Andorra la Vella]]
 [[ru:Андорра-ла-Велья]]
-[[sq:Andorra la Vella]]
 [[simple:Andorra la Vella]]
 [[sk:Andorra (mesto)]]
+[[sq:Andorra la Vella]]
 [[sr:Андора ла Веља]]
-[[fi:Andorra la Vella]]
 [[sv:Andorra la Vella]]
-[[tl:Lungsod ng Andorra la Vella]]
-[[tt:Andorra la Vella]]
+[[sw:Andorra la Vella]]
 [[tet:Andorra Tuan]]
+[[tl:Lungsod ng Andorra la Vella]]
 [[tr:Andorra la Vella]]
+[[tt:Andorra la Vella]]
 [[uk:Андорра-ла-Велья]]
 [[vo:Andorra la Vella]]
 [[zh:安道爾城]]
