--- a/Bangladesh.mw
+++ b/Bangladesh.mw
@@ -118,6 +118,7 @@
 [[ms:Bangladesh]]
 [[na:Bangladesh]]
 [[nds:Bangladesch]]
+[[new:बंगलादेश]]
 [[nl:Bangladesh]]
 [[nn:Bangladesh]]
 [[no:Bangladesh]]
