--- a/Byrmani.mw
+++ b/Byrmani.mw
@@ -123,7 +123,7 @@
 [[pl:Birma]]
 [[pms:Myanmar]]
 [[ps:ماينامار(برما)]]
-[[pt:Myanmar]]
+[[pt:Mianmar]]
 [[qu:Myanmar]]
 [[ro:Myanmar]]
 [[ru:Мьянма]]
