--- a/Bolivi.mw
+++ b/Bolivi.mw
@@ -112,6 +112,7 @@ An '''Repoblek Bolivi''' (yn [[Spaynek]], '''''República de Bolivia''''') yw gw
 [[na:Bolivia]]
 [[nah:Bolivitlān]]
 [[nds:Bolivien]]
+[[new:बोलिभिया]]
 [[nl:Bolivia]]
 [[nn:Bolivia]]
 [[no:Bolivia]]
