robot  Adding: [[ie:Democratic Republic de Congo]]

--- a/Repoblek_Werinel_Kongo.mw
+++ b/Repoblek_Werinel_Kongo.mw
@@ -82,6 +82,7 @@ An '''Repoblek Werinel Kongo''' (yn [[Frynkek]], ''République Démocratique du 
 [[hu:Kongói Demokratikus Köztársaság]]
 [[ia:Republica Democratic del Congo]]
 [[id:Republik Demokratik Kongo]]
+[[ie:Democratic Republic de Congo]]
 [[io:Demokratial Republiko Kongo]]
 [[is:Austur-Kongó]]
 [[it:Repubblica Democratica del Congo]]
