robot  Adding: [[new:कूक टापू]]

--- a/Ynysow_Cook.mw
+++ b/Ynysow_Cook.mw
@@ -84,6 +84,7 @@
 [[lt:Kuko salos]]
 [[mi:Kuki Airani]]
 [[ms:Kepulauan Cook]]
+[[new:कूक टापू]]
 [[nl:Cookeilanden]]
 [[nn:Cookøyane]]
 [[no:Cookøyene]]
