robot  Adding: [[new:कुरोव्]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -119,6 +119,7 @@ Kurów yw tyller dineythyans an hembrenkyas ha pennmenyster [[Kemmynegoreth|Kemm
 [[nds:Kurów]]
 [[nds-nl:Kurów]]
 [[ne:कुरुफ]]
+[[new:कुरोव्]]
 [[nl:Kurów (powiat Puławski)]]
 [[nn:Kurów]]
 [[no:Kurów]]
