--- a/Latvi.mw
+++ b/Latvi.mw
@@ -96,7 +96,7 @@
 [[gv:Yn Latvey]]
 [[he:לטביה]]
 [[hi:लातविया]]
-[[hr:Letonija]]
+[[hr:Latvija]]
 [[hsb:Letiska]]
 [[ht:Letoni]]
 [[hu:Lettország]]
