--- a/Afrikaans.mw
+++ b/Afrikaans.mw
@@ -42,7 +42,7 @@
 [[an:Afrikaans]]
 [[ar:لغة أفريكانية]]
 [[ast:Afrikaans]]
-[[bat-smg:Afrėkanū ruoda]]
+[[bat-smg:Afrėkanu kalba]]
 [[bg:Африкаанс]]
 [[bn:আফ্রিকান্স ভাষা]]
 [[br:Afrikaneg]]
