--- a/Frenkek.mw
+++ b/Frenkek.mw
@@ -62,7 +62,7 @@ Yn [[Breten Vyghan]], an yeth frynkek re gemmeras le an ''[[gallo]]'' y'n Est, h
 [[ar:لغة فرنسية]]
 [[ast:Francés]]
 [[az:Fransız dili]]
-[[bat-smg:Prancūzu ruoda]]
+[[bat-smg:Prancūzu kalba]]
 [[be-x-old:Француская мова]]
 [[bg:Френски език]]
 [[bm:Faransikan]]
