--- a/Italek.mw
+++ b/Italek.mw
@@ -48,7 +48,7 @@
 [[ar:لغة إيطالية]]
 [[az:İtaliya dili]]
 [[bar:Italienisch]]
-[[bat-smg:Italu ruoda]]
+[[bat-smg:Italu kalba]]
 [[be-x-old:Італьянская мова]]
 [[bg:Италиански език]]
 [[bn:ইতালীয় ভাষা]]
