*Empty MediaWiki Message*

--- a/Ulbha.mw
+++ b/Ulbha.mw
@@ -1,3 +1,5 @@
+[[Image:Basaltcliffsulva.jpg|right|thumb|200px|Basalt cliffs, near Dùn Bhioramuill on south coast of Ulbha]]
+
 '''Ulbha''' (Saesneg: Ulva) yw Enez yn Alban
 
 * [http://www.ambaile.org.uk/gd/item/item_illustration.jsp?item_id=1107 Am Baile - Uamh air Eilean Ulbha]
