robot  Adding: [[new:एसिया]]

--- a/Asi.mw
+++ b/Asi.mw
@@ -108,6 +108,7 @@ Yn fenowgh, yma [[doronieth|dorydhyon]] ow tiberth Asi yn niver a rannow:
 [[nds:Asien]]
 [[nds-nl:Azie]]
 [[ne:एशिया]]
+[[new:एसिया]]
 [[nl:Azië]]
 [[nn:Asia]]
 [[no:Asia]]
