--- a/Europa.mw
+++ b/Europa.mw
@@ -110,6 +110,7 @@ A-dhia [[Nessa Bresel an Norvys]], y tallathas statow Europa dos keffrys. Unyans
 [[nds:Europa]]
 [[nds-nl:Europa (continent)]]
 [[ne:युरोप]]
+[[new:युरोप]]
 [[nl:Europa (werelddeel)]]
 [[nn:Europa]]
 [[no:Europa]]
