--- a/Danek.mw
+++ b/Danek.mw
@@ -42,7 +42,7 @@
 [[ar:لغة دانماركية]]
 [[ast:Danés]]
 [[az:Danimarka dili]]
-[[bat-smg:Danū ruoda]]
+[[bat-smg:Danu kalba]]
 [[be-x-old:Дацкая мова]]
 [[bg:Датски език]]
 [[bn:ডেনীয় ভাষা]]
