--- a/Derbyshire.mw
+++ b/Derbyshire.mw
@@ -57,7 +57,7 @@
 [[fr:Derbyshire]]
 [[hi:डर्बीशायर]]
 [[it:Derbyshire]]
-[[ja:ダービーシャー州]]
+[[ja:ダービーシャー]]
 [[lb:Derbyshire]]
 [[nl:Derbyshire]]
 [[no:Derbyshire]]
