robot  Modifying: [[fa:قاره آفریقا]]

--- a/Afrika.mw
+++ b/Afrika.mw
@@ -116,7 +116,7 @@ Afrika yw diberthys, dell vydh usys, yn [[Afrika North]] (dhe gledh an Difeythti
 [[es:África]]
 [[et:Aafrika]]
 [[eu:Afrika]]
-[[fa:افریقا]]
+[[fa:قاره آفریقا]]
 [[ff:Afirik]]
 [[fi:Afrikka]]
 [[fo:Afrika]]
