robot  Modifying: [[az:Bibliya]]

--- a/Bibel.mw
+++ b/Bibel.mw
@@ -78,7 +78,7 @@ An Yedhewon a dhegemmer an Testament Koth (henwys ynwedh an Bibel [[Ebrow]], po 
 [[ar:الكتاب المقدس]]
 [[ast:Biblia]]
 [[ay:Biblia]]
-[[az:Müqəddəs Kitab]]
+[[az:Bibliya]]
 [[ba:Библия]]
 [[bat-smg:Bėblėjė]]
 [[be:Біблія]]
