--- a/Iran.mw
+++ b/Iran.mw
@@ -143,7 +143,7 @@ A-dro dhe'n wlas yma [[Turkmenistan]], [[Afghanistan]] ha [[Pakistan]] y'n est h
 [[ms:Iran]]
 [[mzn:ئيران]]
 [[na:Iran]]
-[[nah:Iran]]
+[[nah:Irān]]
 [[nds:Iran]]
 [[nl:Iran]]
 [[nn:Iran]]
