--- a/Konteth_Doddridge,_Virjynni_West.mw
+++ b/Konteth_Doddridge,_Virjynni_West.mw
@@ -27,6 +27,7 @@
 [[de:Doddridge County]]
 [[en:Doddridge County, West Virginia]]
 [[eo:Doddridge County (Okcidenta Virginio)]]
+[[fr:Comté de Doddridge]]
 [[lmo:Doddridge County, West Virginia]]
 [[nds:Doddridge County]]
 [[nl:Doddridge County]]
