--- a/Faroyek.mw
+++ b/Faroyek.mw
@@ -42,7 +42,7 @@
 [[af:Faroëes]]
 [[am:ፋሮኛ]]
 [[an:Idioma feroés]]
-[[bat-smg:Farėrū ruoda]]
+[[bat-smg:Farėru kalba]]
 [[bn:ফারোয়েজীয় ভাষা]]
 [[br:Faeroeg]]
 [[bs:Farski jezik]]
