robot  Adding: [[et:Flintshire]], [[nl:Flintshire]]

--- a/Konteth_Flint.mw
+++ b/Konteth_Flint.mw
@@ -7,8 +7,10 @@ An efander pen yw governyes dre an Consel Keverang Konteth Flint.
 [[cy:Sir y Fflint]]
 [[de:Flintshire]]
 [[en:Flintshire]]
+[[et:Flintshire]]
 [[fr:Sir y Fflint]]
 [[it:Flintshire]]
+[[nl:Flintshire]]
 [[no:Flintshire]]
 [[pl:Flintshire]]
 [[ro:Flintshire]]
