--- a/Frisek.mw
+++ b/Frisek.mw
@@ -46,14 +46,14 @@ Frisek hag [[Iseldiryek]] yw yethow soedhogel a Bow Fris.
 [[an:Idioma frisón]]
 [[ang:Fresisc sprǣc]]
 [[ast:Frisón]]
-[[bat-smg:Frīzū ruoda]]
+[[bat-smg:Frīzu kalba]]
 [[br:Yezhoù frizek]]
 [[ca:Frisó]]
 [[cs:Fríské jazyky]]
 [[cy:Ffriseg]]
 [[da:Frisisk (sprog)]]
 [[de:Friesische Sprache]]
-[[en:Frisian language]]
+[[en:Frisian languages]]
 [[eo:Frisa lingvo]]
 [[es:Idioma frisón]]
 [[eu:Frisiera]]
@@ -73,7 +73,7 @@ Frisek hag [[Iseldiryek]] yw yethow soedhogel a Bow Fris.
 [[lt:Fryzų kalba]]
 [[nds:Freesch]]
 [[nds-nl:Freesk]]
-[[nl:Fries (taal)]]
+[[nl:Fries (taalgroep)]]
 [[nn:Frisisk språk]]
 [[no:Frisisk]]
 [[pl:Język fryzyjski]]
