robot  Modifying: [[bat-smg:Galisu kalba]]

--- a/Galijek.mw
+++ b/Galijek.mw
@@ -45,7 +45,7 @@
 [[an:Idioma gallego]]
 [[ar:لغة جليقية]]
 [[ast:Gallegu]]
-[[bat-smg:Galisu ruoda]]
+[[bat-smg:Galisu kalba]]
 [[bg:Галисийски език]]
 [[ca:Gallec]]
 [[cs:Galicijština]]
