robot  Adding: [[lv:Gēlu valodas]]

--- a/Godhelek.mw
+++ b/Godhelek.mw
@@ -27,6 +27,7 @@ An '''yethow Goedhelek''' yw skorenn a deylu tavosow [[Keltek]]. Ymons i ow tall
 [[ja:ゲール語]]
 [[ko:고이델어]]
 [[ku:Zimanên Goidelic]]
+[[lv:Gēlu valodas]]
 [[nl:Goidelisch]]
 [[nn:Goideliske språk]]
 [[no:Goideliske språk]]
