robot  Adding: [[zh:格蘭特縣 (西維吉尼亞州)]]

--- a/Konteth_Grant,_Virjynni_West.mw
+++ b/Konteth_Grant,_Virjynni_West.mw
@@ -33,3 +33,4 @@
 [[no:Grant County i Vest-Virginia]]
 [[pdc:Grant Kaundi, Wescht Wirschini]]
 [[sv:Grant County, West Virginia]]
+[[zh:格蘭特縣 (西維吉尼亞州)]]
