--- a/Ulbha.mw
+++ b/Ulbha.mw
@@ -1,15 +1,18 @@
-[[Image:Basaltcliffsulva.jpg|right|thumb|200px|Basalt cliffs, near Dùn Bhioramuill on south coast of Ulbha]]
+[[Image:Basaltcliffsulva.jpg|right|thumb|200px|Alsyow basalt ryb Dùn Bhioramuill wàr arvor soth Ulbha.]]
 
-'''Ulbha''' (Saesneg: Ulva) yw Enez yn Alban
+'''Ulbha''' ([[Sowsnek|Sowsnak]]: Ulva) yw enys yn Alban. An hanow a dhue dhort an lavar Hen Norgaghak rag "enys an bleydh", ''Ulfr-oy''. An enys yw bian (1&nbsp;990 ha), gen 16 a dregoryon yn [[2001]]. Yma nyver a drevow coth wàr an enys; onen anedha yw Ormaig. Perhenogyon an enys yw an teylu Howard dhort [[Pow Sows]] cledh.
 
+==Kevrednow==
 * [http://www.ambaile.org.uk/gd/item/item_illustration.jsp?item_id=1107 Am Baile - Uamh air Eilean Ulbha]
 * [http://www.ulva.mull.com/ The Isle of Ulva "A world apart"]
-* [http://www.scotlandmag.com/magazine/issue31/12007701.html ''Now who be ye, would cross Loch Gyle?'' (Ulva) John Hannavy visits Ulva, a tiny island off the west coast of Mull Published in Scotland Magazine Issue 31 on 16/02/2007]
+* [http://www.scotlandmag.com/magazine/issue31/12007701.html "Now who be ye, would cross Loch Gyle?" (Ulva) John Hannavy a omwel Ulva, enysyk bian dhe'n west a Mull. Dyllys yn ''Scotland Magazine'' nyver 31, 16/02/2007]
 * [http://www.mullmagic.com/ulva.html Mullmagic.com ''Isle of Ulva'']
-* [http://thescotsman.scotsman.com/magazine.cfm?id=1220702004 ''Where the wild things are'' By Hamish Haswell-Smith]
-* [http://www.le.ac.uk/archaeology/rug/image_collection/hier/bi/si/r4.html Images of archaeological sites in Mull and Ulva, Clive Ruggles, [[University of Leicester]].]
+* [http://thescotsman.scotsman.com/magazine.cfm?id=1220702004 Hamish Haswell-Smith. "Where the wild things are"]
+* [http://www.le.ac.uk/archaeology/rug/image_collection/hier/bi/si/r4.html Imajys tylleryow palas archeolojyk yn Mull hag Ulva, gen Clive Ruggles, University of Leicester.]
 
-[[category:Alban]]
+{{KS}}
+[[Category:Alban]]
+[[Category:Ynysow]]
 
 [[br:Ulbha]]
 [[ca:Ulbha]]
