--- a/Ulbha.mw
+++ b/Ulbha.mw
@@ -11,6 +11,7 @@
 * [http://www.le.ac.uk/archaeology/rug/image_collection/hier/bi/si/r4.html Imajys tylleryow palas archeolojyk yn Mull hag Ulva, gen Clive Ruggles, University of Leicester.]
 
 {{KS}}
+{{stokk-dor}}
 [[Category:Alban]]
 [[Category:Ynysow]]
 
