--- a/Ulbha.mw
+++ b/Ulbha.mw
@@ -1,6 +1,6 @@
 [[Image:Basaltcliffsulva.jpg|right|thumb|200px|Alsyow basalt ryb Dùn Bhioramuill wàr arvor soth Ulbha.]]
 
-'''Ulbha''' ([[Sowsnek|Sowsnak]]: Ulva) yw enys yn Alban. An hanow a dhue dhort an lavar Hen Norgaghak rag "enys an bleydh", ''Ulfr-oy''. An enys yw bian (1&nbsp;990 ha), gen 16 a dregoryon yn [[2001]]. Yma nyver a drevow coth wàr an enys; onen anedha yw Ormaig. Perhenogyon an enys yw an teylu Howard dhort [[Pow Sows]] cledh.
+'''Ulbha''' ([[Sowsnek|Sowsnak]]: Ulva) yw enys yn Alban. An hanow a dhue dhort an lavar Hen Norgaghak rag "enys an bleydh", ''Ulfrsey''. An enys yw bian (1&nbsp;990 ha), gen 16 a dregoryon yn [[2001]]. Yma nyver a drevow coth wàr an enys; onen anedha yw Ormaig. Perhenogyon an enys yw an teylu Howard dhort [[Pow Sows]] cledh.
 
 ==Kevrednow==
 * [http://www.ambaile.org.uk/gd/item/item_illustration.jsp?item_id=1107 Am Baile - Uamh air Eilean Ulbha]
