robot  Modifying: [[ce:Итали]]

--- a/Itali.mw
+++ b/Itali.mw
@@ -69,7 +69,7 @@ An '''Repoblek Itali''' (yn [[Italek]], ''Repubblica Italiana'') yw stat yn degh
 [[br:Italia]]
 [[bs:Italija]]
 [[ca:Itàlia]]
-[[ce:Италий]]
+[[ce:Итали]]
 [[ceb:Italya]]
 [[co:Italia]]
 [[cs:Itálie]]
