--- a/Konteth_Jackson,_Virjynni_West.mw
+++ b/Konteth_Jackson,_Virjynni_West.mw
@@ -33,3 +33,4 @@
 [[no:Jackson County i Vest-Virginia]]
 [[pdc:Jackson Kaundi, Wescht Wirschini]]
 [[sv:Jackson County, West Virginia]]
+[[zh:杰克逊县 (西弗吉尼亚州)]]
