--- a/Poloni.mw
+++ b/Poloni.mw
@@ -22,7 +22,7 @@
 |-
 |Lywydh || [[Lech Kaczyński]]
 |-
-|Pennmenyster || [[Jarosław Kaczyński]]
+|Pennmenyster || [[Donald Tusk]]
 |-
 |[[Enep]] || 312,685 km²
 |-
