robot  Modifying: [[cs:Labouristická strana]]

--- a/Parti_Lavur.mw
+++ b/Parti_Lavur.mw
@@ -11,7 +11,7 @@ Yn [[Kledh-barth Iwerdhon]], an [[SDLP]] yw keffrysyas Lavur. Lavur y honan na w
 [[ar:حزب العمال البريطاني]]
 [[bg:Лейбъристка партия]]
 [[br:Strollad al Labour]]
-[[cs:Labour Party]]
+[[cs:Labouristická strana]]
 [[cy:Y Blaid Lafur (DU)]]
 [[da:Labour]]
 [[de:Labour Party]]
