robot  Modifying: [[af:Engels]]

--- a/Sowsnek.mw
+++ b/Sowsnek.mw
@@ -59,7 +59,7 @@ Gans an yethow [[skots]] ha [[frisek]], yma sowsnek ow kul rann a'n bagas [[sows
 {{Yntrawiki|kodenn=en}}
 [[Category:Yethow Germanek|Sowsnek]]
 
-[[af:Engels (taal)]]
+[[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
 [[an:Idioma anglés]]
