--- a/Zagreb.mw
+++ b/Zagreb.mw
@@ -18,7 +18,7 @@
 |-
 | colspan="2" align="center" | [[Image:Zagreb (grad) - coat.png|Kota arvow Zagreb]]
 |}
-
+[[Image:Zagrzeb stare miasto.jpg|thumb|left]]
 '''Zagreb''' yw pennsita [[Kroati]].
 
 
