robot  Modifying: [[sl:Ličko-senjska županija]]

--- a/Konteth_Lika-Senj.mw
+++ b/Konteth_Lika-Senj.mw
@@ -39,7 +39,7 @@
 [[nl:Lika-Senj]]
 [[sh:Ličko-senjska županija]]
 [[sk:Licko-senjská župa]]
-[[sl:Liško-senjska županija]]
+[[sl:Ličko-senjska županija]]
 [[sr:Личко-сењска жупанија]]
 [[tr:Lika-Senj]]
 [[zh:利卡-塞尼縣]]
