--- a/Lushaborgek.mw
+++ b/Lushaborgek.mw
@@ -60,6 +60,7 @@
 [[gd:Lucsamburgais]]
 [[he:לוקסמבורגית]]
 [[hr:Luksemburški jezik]]
+[[hu:Luxemburgi nyelv]]
 [[id:Bahasa Luksemburg]]
 [[is:Lúxemborgíska]]
 [[it:Lingua lussemburghese]]
