robot  Adding: [[nah:Madagascar]], [[vec:Madagascar]]

--- a/Madagaskar.mw
+++ b/Madagaskar.mw
@@ -105,6 +105,7 @@
 [[mk:Мадагаскар]]
 [[ml:മഡഗാസ്കര്‍]]
 [[ms:Madagaskar]]
+[[nah:Madagascar]]
 [[nds:Madagaskar]]
 [[nl:Madagaskar]]
 [[nn:Madagaskar]]
@@ -136,6 +137,7 @@
 [[tr:Madagaskar]]
 [[uk:Мадагаскар]]
 [[uz:Madagaskar]]
+[[vec:Madagascar]]
 [[vi:Madagascar]]
 [[vo:Malagaseän]]
 [[wo:Madagaskaar]]
