robot  Adding: [[ca:Maria I d'Anglaterra]]

--- a/Maria_I_a_Bow_Sows.mw
+++ b/Maria_I_a_Bow_Sows.mw
@@ -12,6 +12,7 @@ next=[[Elizabeth I a Bow Sows|Elisabeth I]]
 [[ar:ماري الأولى من إنكلترا]]
 [[bg:Мария I Тюдор]]
 [[bs:Marija I Krvava]]
+[[ca:Maria I d'Anglaterra]]
 [[cs:Marie I. Tudorovna]]
 [[cy:Mari I, brenhines Lloegr]]
 [[da:Maria 1. af England]]
