robot  Adding: [[fo:Niðurlendsku Antillurnar]]

--- a/Antillys_Iseldiryek.mw
+++ b/Antillys_Iseldiryek.mw
@@ -70,6 +70,7 @@ An '''Antillys Iseldiryek''' (yn [[Iseldiryek]], ''Nederlandse Antillen'') yw ti
 [[et:Hollandi Antillid]]
 [[eu:Holandarren Antillak]]
 [[fi:Alankomaiden Antillit]]
+[[fo:Niðurlendsku Antillurnar]]
 [[fr:Antilles néerlandaises]]
 [[frp:Antiles nêrlandêses]]
 [[gl:Antillas Neerlandesas]]
