robot  Adding: [[cy:Bro-Gerne]]

--- a/Kernow_Vian.mw
+++ b/Kernow_Vian.mw
@@ -14,6 +14,7 @@ Goleiñ a ra (dre vras) an div drederenn eus Su [[Penn-ar-Bed]], un nebeud [[kum
 
 [[br:Bro-Gerne]]
 [[ca:Bro Kernev]]
+[[cy:Bro-Gerne]]
 [[de:Cornouaille]]
 [[en:Cornouaille]]
 [[eo:Bro-Gerne]]
