robot  Adding: [[ta:மிசிசிப்பி]], [[vo:Mississippi]]

--- a/Mississippi.mw
+++ b/Mississippi.mw
@@ -98,11 +98,13 @@ notes=
 [[sq:Mississippi]]
 [[sr:Мисисипи (држава)]]
 [[sv:Mississippi]]
+[[ta:மிசிசிப்பி]]
 [[th:มลรัฐมิสซิสซิปปี]]
 [[tr:Mississippi (eyalet)]]
 [[uk:Міссісіпі (штат)]]
 [[ur:مسیسپی]]
 [[uz:Mississippi]]
 [[vi:Mississippi]]
+[[vo:Mississippi]]
 [[zh:密西西比州]]
 [[zh-min-nan:Mississippi]]
