robot  Modifying: [[da:Franske revolution]]

--- a/Domhwelans_Frynkek.mw
+++ b/Domhwelans_Frynkek.mw
@@ -20,7 +20,7 @@ Yn [[Breten Vyghan]] ha'n [[Vendée]], yth esa an ''[[Chouanted]]'' owth omladh 
 [[ca:Revolució Francesa]]
 [[cs:Velká francouzská revoluce]]
 [[cy:Y Chwyldro Ffrengig]]
-[[da:Den franske revolution]]
+[[da:Franske revolution]]
 [[de:Französische Revolution]]
 [[el:Γαλλική Επανάσταση]]
 [[en:French Revolution]]
