robot  Adding: [[hr:Fenički jezik]]

--- a/Fenicek.mw
+++ b/Fenicek.mw
@@ -34,6 +34,7 @@
 [[es:Idioma fenicio]]
 [[et:Foiniikia keel]]
 [[fr:Phénicien]]
+[[hr:Fenički jezik]]
 [[hu:Föníciai nyelv]]
 [[ja:フェニキア語]]
 [[ko:페니키아어]]
