--- a/Friuli-Venezia_Giulia.mw
+++ b/Friuli-Venezia_Giulia.mw
@@ -42,6 +42,7 @@
 [[fr:Frioul-Vénétie julienne]]
 [[frp:Frioul-Vènècie j·ulièna]]
 [[fur:Friûl-Vignesie Julie]]
+[[gl:Friuli-Venezia Giulia]]
 [[he:פריולי-ונציה ג'וליה]]
 [[hr:Furlanija-Julijska krajina]]
 [[hu:Friuli-Venezia Giulia]]
