robot  Adding: [[br:Galizeg]]

--- a/Galijek.mw
+++ b/Galijek.mw
@@ -47,6 +47,7 @@
 [[ast:Gallegu]]
 [[bat-smg:Galisu kalba]]
 [[bg:Галисийски език]]
+[[br:Galizeg]]
 [[ca:Gallec]]
 [[cs:Galicijština]]
 [[cy:Galisieg]]
