--- a/Mebyon_Kernow.mw
+++ b/Mebyon_Kernow.mw
@@ -23,5 +23,6 @@ Yn [[Porthia]], nyns esa ombrofyer awos kesunynas MK ha'n [[Parti Gwyrdh]]. Y kw
 [[eu:Mebyon Kernow]]
 [[fr:Mebyon Kernow]]
 [[gl:Mebyon Kernow]]
+[[hu:Mebyon Kernow]]
 [[nl:Mebyon Kernow]]
 [[sv:Mebyon Kernow]]
