robot  Adding: [[gl:Dialecto gascón]]

--- a/Gaskoynek.mw
+++ b/Gaskoynek.mw
@@ -56,6 +56,7 @@ Yth ombrederir yn fenowgh bos Gaskoynek rannyeth a [[Oksitanek]]. Hemm yw an sav
 [[eu:Gaskoiera]]
 [[fr:Gascon]]
 [[frp:Gascon]]
+[[gl:Dialecto gascón]]
 [[io:Gaskoniana linguo]]
 [[it:Dialetto guascone]]
 [[ja:ガスコーニュ語]]
