robot  Adding: [[ka:თანხმოვანი]]

--- a/Kessonen.mw
+++ b/Kessonen.mw
@@ -47,6 +47,7 @@ Yn lytherennegi skrifys, '''kessonenn''' yw [[lytherenn]] ow styrya (dell vydh u
 [[it:Consonante]]
 [[ja:子音]]
 [[jv:Konsonan]]
+[[ka:თანხმოვანი]]
 [[ko:닿소리]]
 [[ln:Molelisi]]
 [[nl:Medeklinker]]
