robot  Adding: [[mr:पोप सिल्व्हेस्टर पहिला]] Modifying: [[gl:Silvestre I, papa]]

--- a/Sen_Sylvester.mw
+++ b/Sen_Sylvester.mw
@@ -25,7 +25,7 @@ next=Sen Margh
 [[eo:Silvestro la 1-a]]
 [[es:Silvestre I]]
 [[fr:Sylvestre Ier]]
-[[gl:Silvestre I, Papa]]
+[[gl:Silvestre I, papa]]
 [[he:סילבסטר הראשון]]
 [[hr:Silvestar I.]]
 [[hu:I. Szilveszter pápa]]
@@ -34,6 +34,7 @@ next=Sen Margh
 [[ka:სილვესტერ I]]
 [[ko:교황 실베스테르 1세]]
 [[la:Silvester I]]
+[[mr:पोप सिल्व्हेस्टर पहिला]]
 [[nl:Paus Silvester I]]
 [[pl:Sylwester I]]
 [[pt:Papa Silvestre I]]
