--- a/Almayn.mw
+++ b/Almayn.mw
@@ -73,7 +73,7 @@ Aswonnys avel [[Taves ranndiryel|tavosow ranndiryel]] yw [[Danek]], [[Sorbek]], 
 [[ay:Alimaña]]
 [[az:Almaniya]]
 [[bar:Deitschlånd]]
-[[bat-smg:Vuokėitėjė]]
+[[bat-smg:Vuokītėjė]]
 [[be:Германія]]
 [[be-x-old:Нямеччына]]
 [[bg:Германия]]
