robot  Adding: [[br:Minas Gerais]]

--- a/Minas_Gerais.mw
+++ b/Minas_Gerais.mw
@@ -43,6 +43,7 @@
 [[ar:ميناس جيرايس]]
 [[ast:Minas Gerais]]
 [[bpy:মিনাস জেরায়িস]]
+[[br:Minas Gerais]]
 [[ca:Minas Gerais]]
 [[co:Minas Gerais]]
 [[cs:Minas Gerais]]
