robot  Modifying: [[en:Morelos]]

--- a/Morelos.mw
+++ b/Morelos.mw
@@ -49,7 +49,7 @@
 [[ca:Morelos]]
 [[da:Morelos]]
 [[de:Morelos]]
-[[en:Morelos (state)]]
+[[en:Morelos]]
 [[eo:Morelos]]
 [[es:Morelos]]
 [[et:Morelos]]
