robot  Adding: [[sv:Land's End]]

--- a/Pedn_an_Wlas.mw
+++ b/Pedn_an_Wlas.mw
@@ -14,3 +14,4 @@ Desedhans Penn an Wlas yw fest yn howlsedhes [[Pennwydh]].
 [[ja:ランズ・エンド (岬)]]
 [[nl:Land's End]]
 [[no:Land's End]]
+[[sv:Land's End]]
