--- a/Statys_Unys.mw
+++ b/Statys_Unys.mw
@@ -190,6 +190,7 @@ Statys (powyow) an Statys Unys:
 [[lg:Amereka]]
 [[li:Vereinegde State van Amerika]]
 [[lij:Stati Unïi d'America]]
+[[lmo:United States]]
 [[ln:Lisangá lya Ameríka]]
 [[lt:JAV]]
 [[lv:Amerikas Savienotās Valstis]]
