robot  Adding: [[ar:ساموا الأمريكية]]

--- a/Samoa_Amerikan.mw
+++ b/Samoa_Amerikan.mw
@@ -48,6 +48,7 @@
 [[Category:Ostralasi]]
 [[Category:Powyow ynysek an SUA]]
 
+[[ar:ساموا الأمريكية]]
 [[az:Amerikan Samoası]]
 [[bg:Американска Самоа]]
 [[bpy:আমেরিকান সামোয়া]]
