--- a/Seychellys.mw
+++ b/Seychellys.mw
@@ -106,6 +106,7 @@
 [[pms:Seychelles]]
 [[ps:سېچېلېس]]
 [[pt:Seychelles]]
+[[qu:Sichilla]]
 [[ro:Seychelles]]
 [[ru:Сейшелы]]
 [[se:Seychellsullot]]
@@ -123,6 +124,7 @@
 [[tr:Seyşel Adaları]]
 [[uk:Сейшельські Острови]]
 [[uz:Seychelles]]
+[[vec:Seychelles]]
 [[vi:Seychelles]]
 [[vo:Sejeluäns]]
 [[wo:Seysel]]
