--- a/Alban.mw
+++ b/Alban.mw
@@ -115,7 +115,7 @@ Alban o rywvaneth krev lowr bys yn [[17ves kansblydhen|1603]], pan wrug hy maght
 [[pl:Szkocja]]
 [[pms:Scòssia]]
 [[pt:Escócia]]
-[[qu:Iskusya]]
+[[qu:Iskutsuyu]]
 [[rm:Scozia]]
 [[ro:Scoţia]]
 [[roa-rup:Scotlandia]]
