*Empty MediaWiki Message*

--- a/Panama.mw
+++ b/Panama.mw
@@ -39,6 +39,8 @@
 
 An '''Repoblek Panama''' (yn [[Spaynek]], ''República de Panamá'') yw gwlas yn [[Amerika Gres]].
 
+* [http://www.coolpanama.com/ CoolPanama] Panama Portal
+
 
 {{stokk-dor}}
 {{AmerikaGres}}
