--- a/Baja_California_Sur.mw
+++ b/Baja_California_Sur.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Baja California Sur</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-BCS.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Kaliforni Isel Soth
 |-
