--- a/Campeche.mw
+++ b/Campeche.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Campeche</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-CAM.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Campeche
 |-
