--- a/Stat_Meksiko.mw
+++ b/Stat_Meksiko.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de México</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-MEX.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow México
 |-
