--- a/Morelos.mw
+++ b/Morelos.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Morelos</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-MOR.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Morelos
 |-
