--- a/Michoacán.mw
+++ b/Michoacán.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Michoacán de Ocampo</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-MIC.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Michoacán
 |-
