--- a/Sonora.mw
+++ b/Sonora.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Sonora</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-SON.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Sonora
 |-
