The file [[:Image:Escudo_MX-DF.gif]] has been removed, as it has been deleted by [[:commons:User:Lupo]]: ''copyvio; see [[w:commons:COM:L]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Ranndir_an_Kesunyans_Meksikan.mw
+++ b/Ranndir_an_Kesunyans_Meksikan.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Distrito Federal</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-DF.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Distrito Federal
 |-
