--- a/San_Luis_Potosí.mw
+++ b/San_Luis_Potosí.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de San Luis Potosí</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-SLP.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow San Luis Potosí
 |-
