--- a/Quintana_Roo.mw
+++ b/Quintana_Roo.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Quintana Roo</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-ROO.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Quintana Roo
 |-
