--- a/Tlaxcala.mw
+++ b/Tlaxcala.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Tlaxcala</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-TLA.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Tlaxcala
 |-
