The file [[:Image:Escudo_MX-VER.gif]] has been removed, as it has been deleted by [[:commons:User:Lupo]]: ''copyvio; see [[w:commons:COM:L]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Veracruz.mw
+++ b/Veracruz.mw
@@ -2,7 +2,7 @@
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|<big>Estado Libre y Soberano de Veracruz de Ignacio de la Llave</big>
 |-
-|align="center" colspan="3"|[[Image:Escudo MX-VER.gif|120px]]
+|align="center" colspan="3"|
 |-
 !align="center" bgcolor="#ccccff" colspan="3"|Kota arvow Veracruz
 |-
