robot  Adding: [[gl:Val de Aosta]]

--- a/Nans_Aosta.mw
+++ b/Nans_Aosta.mw
@@ -40,6 +40,7 @@ An '''Valle d'Aosta''' (yn [[Arpitanek]], '''''Val d'Outa'''''; yn [[Frynkek]], 
 [[fr:Vallée d'Aoste]]
 [[frp:Vâl d’Aoûta]]
 [[fur:Val d'Aoste]]
+[[gl:Val de Aosta]]
 [[he:ואלה ד'אאוסטה]]
 [[hr:Valle d'Aosta]]
 [[hu:Valle d’Aosta]]
