robot  Adding: [[gl:Trentino-Tirol do Sur]]

--- a/Trentino-Alto_Adige.mw
+++ b/Trentino-Alto_Adige.mw
@@ -42,6 +42,7 @@
 [[fr:Trentin-Haut-Adige]]
 [[frp:Trentin-Hôt Adige]]
 [[fur:Trentin-Sud Tirôl]]
+[[gl:Trentino-Tirol do Sur]]
 [[he:טרנטינו - אלטו אדיג'ה]]
 [[hr:Trentino-Južni Tirol]]
 [[hu:Trentino-Alto Adige]]
