robot  Adding: [[es:Lenguas Goidelicas]]

--- a/Godhelek.mw
+++ b/Godhelek.mw
@@ -16,6 +16,7 @@ An '''yethow Goedhelek''' yw skorenn a deylu tavosow [[Keltek]]. Ymons i ow tall
 [[el:Γοϊδελικές γλώσσες]]
 [[en:Goidelic languages]]
 [[eo:Gaela lingvaro]]
+[[es:Lenguas Goidelicas]]
 [[fo:Goidelisk (mál)]]
 [[fr:Langue gaélique]]
 [[ga:Teangacha Gaelacha]]
