robot  Adding: [[ru:Нур-Трёнделаг]]

--- a/Nord-Trøndelag.mw
+++ b/Nord-Trøndelag.mw
@@ -57,6 +57,7 @@
 [[pl:Nord-Trøndelag]]
 [[pt:Nord-Trøndelag]]
 [[ro:Nord-Trøndelag]]
+[[ru:Нур-Трёнделаг]]
 [[se:Davvi-Trøndelága]]
 [[sv:Nord-Trøndelag fylke]]
 [[tr:Nord-Trøndelag]]
