robot  Adding: [[nl:Land van Saint-Malo]]

--- a/Bro_Sen_Malo.mw
+++ b/Bro_Sen_Malo.mw
@@ -11,3 +11,4 @@ Bro Sen Malo yw diberthys a-dhia dermyn an [[Domhwelans Frynkek]] ynter an ''dé
 [[ca:Bro Sant Malou]]
 [[eu:Bro Sant Malou]]
 [[fr:Évêché de Saint-Malo]]
+[[nl:Land van Saint-Malo]]
