robot  Adding: [[als:Bibel]]

--- a/Bibel.mw
+++ b/Bibel.mw
@@ -75,6 +75,7 @@ An Yedhewon a dhegemmer an Testament Koth (henwys ynwedh an Bibel [[Ebrow]], po 
 [[Category:Kristoneth]]
 
 [[af:Bybel]]
+[[als:Bibel]]
 [[ar:الكتاب المقدس]]
 [[ast:Biblia]]
 [[ay:Biblia]]
