robot  Adding: [[new:अमेरिका]]

--- a/Statys_Unys.mw
+++ b/Statys_Unys.mw
@@ -207,6 +207,7 @@ Statys (powyow) an Statys Unys:
 [[nds:USA]]
 [[nds-nl:Verienigde Staoten van Amerika]]
 [[ne:संयुक्त राज्य अमेरिका]]
+[[new:अमेरिका]]
 [[nl:Verenigde Staten]]
 [[nn:USA]]
 [[no:Amerikas forente stater]]
