robot  Adding: [[ss:Lukholo]]

--- a/Kryjyans.mw
+++ b/Kryjyans.mw
@@ -144,6 +144,7 @@ Yma dew vagas chyf a gryjyans y'n [[bys ma]], h.y. kryjyansow [[Abraham|Abrahame
 [[sl:Verstvo]]
 [[sq:Feja]]
 [[sr:Религија]]
+[[ss:Lukholo]]
 [[sv:Religion]]
 [[sw:Dini]]
 [[tg:Дин]]
