*Empty MediaWiki Message*

--- a/Nunavut.mw
+++ b/Nunavut.mw
@@ -31,7 +31,7 @@ fuseau_horaire=-7, -6, -5, ha -4 |
 domaine_internet=.nu.ca |
 notes=
 }}
-[[Image:ARVIAT (NUNAVUT).jpg|thumb|200px|left| Inuit, Arviat (Photo: Patrick André Perron)]]
+[[Image:ARVIAT (NUNAVUT).jpg|thumb|350px|left| Inuit, Arviat (Photo: Patrick André Perron)[http://www.pbase.com/perrona/inuit__cree_rupert__river   Nunavut]]]
 '''Nunavut''' yw tiredh yn [[Kanada]].  
 
 {{Stokk-kanada}}
